Development history / change log, please read from bottom up

Version 3.5.0 - xx yyy 2021
Generic changes/fixes
	* fix file comment tab update
	
Device specific changes/fixes
	* HitecX1Red - change voltage parsing to unsigned
	* iMAX BC6 - fix firmware message 
	* Core-Telemetry - update log reader

Version 3.4.9 - 14 Jun 2021
Generic changes/fixes
	* remove property enumeration value="tolerate_sign_change"
	* add log output detecting possible corrupt file creating history
	* codesign Mac OS X - add time stamp and identifier to dmg
	* Schema update (V43) to reflect removed property as well as updated device XML
	* add IDevice method to correct channel if required (simplified OSD from GDE Android)
	
Device specific changes/fixes
	* HoTTAdapter* - remove dependency to property using North/South hemisphere, as well as East/West of meridian
	* HoTTAdapter* - rename variable GPS values in XML to propagate to history analysis
	* HoTTAdapter* - correct offset MSL altitude if contained in GPS in *.log
	* HoTTAdapter* - correct factor home direction, enable translation for HomeDirection
	* HoTTAdapter* - refactor method updating GPS type dependent records
	* HoTTAdapter* - update GPS type dependent records while loading from OSD
	* HoTTAdapter* - harmonize temperature offset to fix scale sync problem in HoTTAdapter2
	* HoTTAdapter2 - fix GPS data import single sensor
	* IGCAdapter - add missing unit in device XML
	* GPS-Logger3 - additional measurements added with 1.26 (NMEA Import)
	* GPS-Logger* - update configuration according 1.26
	* GPS-Logger* - fix visualization dialog

Version 3.4.8 - 24 Apr 2021
Generic changes/fixes
	* enable record based scale sync property updates (outside device XML)
	
Device specific changes/fixes
	* HoTTAdapter* - fix scale synchronization, formatting, unit and factor to support different GPS data source
	* HoTTAdapter* - change SM GPS-Logger names from gyro to acceleration
	* HoTTAdapter* - change GPS time and year to more readable format