@@ -3,6 +3,7 @@ Development history / change log, please read from bottom up
 Version 3.5.0 - xx yyy 2021
 Generic changes/fixes
 	* fix file comment tab update
+	* fix missing update device selection dialog, port selection combo
 	
 Device specific changes/fixes
 	* HitecX1Red - change voltage parsing to unsigned
